fixed traveller listing button margin on mobile, changed organisation to teams for navbar menu

--- a/src/components/Custom/TravellersExperienceButtons.module.scss
+++ b/src/components/Custom/TravellersExperienceButtons.module.scss
@@ -13,5 +13,11 @@
 @media (min-width: 320px) and (max-width: 600px) {
   .container {
     flex-direction: column;
+    margin: $grid-small
   }
+
+  .button {
+    margin: $grid-small 0px;
+  }
+
 }
